# transformer

./: .gitignore  Cargo.toml  README.md  REDAME-zh.md  package-lock.json  package.json
.github/workflows/: rust.yml
app/: Cargo.toml
app/src/: app.rs  lib.rs  transformers.rs
app/src/transformers/: baidu.rs
base/: Cargo.toml
base/src/: env.rs  lib.rs  strlib.rs
components/: ConfigModal.tsx
next/components/AppLayout/: index.tsx
next/components/HomeBlock/: index.tsx
next/containers/Home/: index.tsx
next/pages/: index.tsx
pages/: index.tsx
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: lib.rs  mod.rs
src/lib/translate/: baidu.rs  mod.rs
styles/: ConfigModal.module.css  Home.module.css
tauri/: tauri.conf.json
transformers/: Cargo.toml
