[package]
name = "transformer"
version = "0.1.0"
edition = "2018"
authors = ["Breaker <791628659@qq.com>"]
description = "👽 Not Only a Translator"
readme = "./README.md"
repository = "https://github.com/iBreaker/transmormer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
eframe = "0.18.0"
reqwest = { version = "0.11.11", features = ["blocking", "json"]}
serde = {version = "1.0.143", features = ["derive"]}
md5 = "0.7.0"