[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epi = { version = "0.14.0" }
eframe = { version = "0.14.0", features = ["time"] }
egui = { version = "0.14.2" }
base = { path = "../base" }
base64 = "0.13.0"
md5 = "0.7.0"
urlencoding = "2.1.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
rand = {version = "0.8.4"}
threadpool = "1.8.1"